# noisegate

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  release.yml
docs/: product-contract.md
docs/design/: lossless-recovery-consumer-contract.md
noisegate/: __init__.py  artifacts.py  cli.py  engine.py  installer.py  json_utils.py  plugin.py  plugin.yaml  wrap.py
npm/noisegate/: README.md  package-lock.json  package.json  test-wrapper.js
npm/noisegate/docs/: product-contract.md
scripts/: __init__.py  build_release_notes.py  check_contributors.py  check_release.py  prepare_release.py  release_tools.py
tests/: lossless_recovery_fixture_validator.py  test_agent_workflows.py  test_artifacts.py  test_cli.py  test_execute_code_boundaries.py  test_installer.py  test_lcm_externalized_payloads.py  test_lossless_recovery_contract.py  test_packaging.py  test_perseus_prepare_contract.py  test_plugin_hook.py  test_process_payload_safety.py  test_reducers.py  test_release_tools.py  test_slop_signal_source_contract.py  test_wrap.py
tests/fixtures/: perseus_prepare_output.golden.json
tests/fixtures/lossless_recovery/: README.md  vectors.json
